--- a/src/app/resume/scss/_resume.scss
+++ b/src/app/resume/scss/_resume.scss
@@ -1,36 +1,76 @@
 .resume { 
 	h1 { color: $accent; margin: 0; }
-	.hero { height: 320px;
+	
+	@media screen and (max-width: $screen-sm-max) {
+		.hero { background: grey; height: 320px; }
+		.hero h1 { text-align: center; margin-top: 167.5px; }
+
+	}
+
+	@media screen and (min-width: $screen-md-min) {
+		.hero h1 { line-height: 320px; }
+	 	.hero { height: 320px;
 		background: url('../content/images/book.jpg');
 		background-size: cover;	
 		background-position-y: 430px;
+		}
 	}
-	.hero h1 { line-height: 320px; }
-}
-
-.skill {
-	padding-top: 120px;
-	padding-bottom: 120px;
-}
-
-.image {
-	text-align: center;
-	margin-bottom: 15px;
 }
 
 .main-skill-container {
 	text-align: center;
 }
 
-.main-skill {
+
+
+
+
+
+@media screen and (max-width: $screen-sm-max) {
+
+	.sub-skill-container {
+		text-align: center;
+		padding-bottom: 35px;
+	}
+
+	.sub-skill-container.divider {
+		border-bottom: 1px solid $divider;
+	}
+
+	.image {
+		text-align: center;
+		margin-top: 46px;
+		margin-bottom: 15px;
+	}
+
+	.main-skill {
 	color: $accent;
 	border-bottom: 10px solid $divider;
 	display: inline-block;
+	margin-top: 35px;
+	margin-bottom: 35px;
+}
 }
 
-
-.sub-skill-container {
+@media screen and (min-width: $screen-md-min) {
+	.skill {
+		padding-top: 120px;
+		padding-bottom: 120px;
+	}
+	.sub-skill-container {
 	text-align: center;
+	}
+
+	.image {
+	text-align: center;
+	margin-bottom: 15px;
+	}
+
+	.main-skill {
+	color: $accent;
+	border-bottom: 10px solid $divider;
+	display: inline-block;
+	}
 }
 
 .sub-skill {
