updated h3 color on homepage

--- a/src/app/home/scss/_home.scss
+++ b/src/app/home/scss/_home.scss
@@ -129,7 +129,7 @@
 		.content-container .content {
 		    color: $text-secondary;
 		  
-		    h3 { margin-top: 0; color: $text; }
+		    h3 { margin-top: 0; color: $accent; }
 		}
 
 		.image-container {
