--- a/src/main.css
+++ b/src/main.css
@@ -7514,7 +7514,7 @@ h3 {
     /* line 132, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .programmings .content-container .content h3 {
       margin-top: 0;
-      color: #6991AC; }
+      color: #D75C37; }
   /* line 135, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
   .home .programmings .image-container {
     text-align: center;
